Fixed gap between message & notification

--- a/stream.css
+++ b/stream.css
@@ -55,7 +55,7 @@
     width: 100%;
     font-size: 14px;
     padding: 0.75rem 1.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.75rem;
     border-radius: 15px;
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
